<resources>
    <string name="app_name">Finbaz</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_bank_account">My Profile</string>
    <string name="title_credit_card">Credit Card</string>
    <string name="title_insurance">Insurance</string>
    <string name="title_demat_account">Demat Account</string>
    <string name="title_credit_score">Credit Score</string>
    <string name="title_emi_calc">EMI Calculator</string>
    <string name="title_refer_earn">Refer and Earn</string>
    <string name="title_offers">Offers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="query_items_spinner">
        <item>--Query Type--</item>
        <item>Loan</item>
        <item>Savings Account</item>
        <item>Insurance</item>
        <item>Credit Card</item>
        <item>Demat Account</item>
        <item>Credit Score</item>
    </string-array>
    <string-array name="gender_array">
        <item>--Select--</item>
        <item>Male</item>
        <item>Female</item>

    </string-array>
    <string-array name="employment_type_array">

        <item>--Select--</item>
        <item>Salaried</item>
        <item>Self Employed</item>
        <item>Retired</item>
        <item>Others</item>
    </string-array>
    <string-array name="working_experience_array">

        <item>--Select--</item>
        <item>0–6 months</item>
        <item> 6–12 months</item>
        <item>1–3 years</item>
        <item>3+ years</item>

    </string-array>
    <string-array name="monthly_income_array">

        <item>--Select--</item>
        <item> below 10,000</item>
        <item> 10k-25k</item>
        <item>25k-50k</item>
        <item>50k+</item>

    </string-array>
    <string-array name="residence_type_array">

        <item>--Select--</item>
        <item>Parental</item>
        <item>Owned</item>
        <item>Rented</item>
        <item>Others</item>

    </string-array>
    <string-array name="marital_status_array">

        <item>--Select--</item>
        <item>Single</item>
        <item>Married</item>
        <item>Others</item>

    </string-array>
    <string-array name="vehicle_type_array">

        <item>--Select--</item>
        <item>2 Wheeler</item>
        <item>4 Wheeler</item>
        <item>Not Using</item>
        <item>Others</item>

    </string-array>
    <string name="kotak_savAcc_title">Kotak 811 Savings Account</string>
    <string name="rbl_savAcc_title">RBL Bank Digital Savings Account</string>
    <string name="digibank_savAcc_title">Digibank by DBS Savings Account</string>
    <string name="indusind_savAcc_title">IndusInd Bank Savings Account</string>
    <string name="idfc_savAcc_title">IDFC First Bank Digital Savings Account</string>
    <string name="notice_to_user">This is to notify all the users that <a href="www.finbaz.com">www.finbaz.com</a> or Finbaz app offers its services free of cost to its users and does not demand any payments with respect to their applications for financial products offered through its website and mobile app.
All the users are advised not get tempted and be cautious of any phone calls, SMSs and E-mails asking for depositing any processing fees/additional charges in return for expediting credit card or loan approvals.
In case any such situation arises, you may bring the details of such suspicious communications to the notice of the company and the local police.</string>
    <string name="indusind_about_string">IndusInd Bank is a universal Bank with a widespread banking footprint with over 2.5 crore customers, over 5,000 distribution points and nearly 2,000 branches across the country. With ‘Sustainability’ at the core, we offer a wide array of products and services for individuals and corporates including microfinance, personal loans, personal and &amp; commercial vehicles loans, credit cards and SME loans. We are also a preferred banking partner for various Government entities, PSUs and large corporates.</string>
    <string name="kotak_about_string"> Kotak Mahindra Bank Limited is an Indian private sector bank headquartered in Mumbai, Maharashtra, India. It offers banking products and financial services for corporate and retail customers in the areas of personal finance, investment banking, life insurance, and wealth management. As of April 2019, it is the second largest Indian private sector bank by market capitalization, with 1600 branches &amp; 2519 ATMs.</string>
    <string name="digibank_about_string"> DBS is a leading financial services group in Asia, with over 280 branches across 18 markets. Headquartered and listed in Singapore, DBS has a growing presence in the three key Asian axes of growth: Greater China, Southeast Asia and South Asia. The bank\'s "AA-" and "Aa1" credit ratings are among the highest in the world.>
        Recognised for its global leadership, DBS has been named “Global Bank of the Year” by The Banker and “Best Bank in the World” by Global Finance. The bank is at the forefront of leveraging digital technology to shape the future of banking, having been named “World’s Best Digital Bank” by Euromoney. In addition, DBS has been accorded the “Safest Bank in Asia” award by Global Finance for ten consecutive years from 2009 to 2018.DBS provides a full range of services in consumer, SME and corporate banking. As a bank born and bred in Asia, DBS understands the intricacies of doing business in the region’s most dynamic markets. DBS is committed to building lasting relationships with customers, and positively impacting communities through supporting social enterprises, as it banks the Asian way. It has also established a SGD 50 million foundation to strengthen its corporate social responsibility efforts in Singapore and across Asia.
        With its extensive network of operations in Asia and emphasis on engaging and empowering its staff, DBS presents exciting career opportunities. The bank acknowledges the passion, commitment and can-do spirit in all of our 26,000 staff, representing over 40 nationalities.</string>
    <string name="rbl_about_string">RBL Bank is one of India’s fastest growing private sector banks with an expanding presence across the country. The Bank offers specialized services under six business verticals namely: Corporate &amp; Institutional Banking, Commercial Banking, Branch &amp; Business Banking, Retail Assets, Development Banking and Financial Inclusion, Treasury and Financial Markets Operations. It currently services over 8.44 million customers through a network of 392 branches, 1,221 business correspondent branches (of which 263 banking outlets) and 389 ATMs spread across 28 Indian states and Union Territories.\n\n
        RBL Bank is listed on both NSE and BSE (RBLBANK).</string>
    <string name="idfc_about_string">IDFC FIRST Bank Limited, listed in NSE and BSE, is a leading Indian financial institution, specializing in providing debt financing to MSMEs and Consumers in India.\n\n
        Between 2008 to 2010, the Company was largely in the business of wholesale Financing, asset management, and had JVs in Foreign Exchange and retail equity Broking. Between 2010 to 2012, Mr. Vaidyanathan acquired a stake in the company, changed the business model to retail, and executed a Management Buyout of the company by securing equity backing from Warburg Pincus for Rs. 810 Crores and changed the name of the company to IDFC FIRST Bank. In the process the company got new shareholders, reconstituted a new board and started new retail business lines.\n\nThe Market Cap of IDFC FIRST Bank has increased from Rs. 7.90 billion ($121 mn) on June 30 2012 (FY ending prior to the buyout) to Rs. 60.96 bn on June 30, 2018. ($0.94 bn).
        The founding theme of IDFC FIRST Bank is that financing India\'s 50 million MSMEs and its emerging middle class, with a differentiated model, based on new technologies provides a large and unique opportunity.\n\nUnlike traditional models of financing, IDFC FIRST Bank has successfully created new models to finance MSMEs and Indian consumers, in the hitherto unbanked and under-penetrated segments. The Company uses a differentiated model, based on new technologies and deep analytics. With this differentiated approach, IDFC FIRST Bank has financed over 7.0 million customers in more than 225 locations across India and built loan assets of Rs 326.22 Bn (USD 4.47 bn) as on 30 September, 2018, with 91% of its loan assets in the Consumer &amp; MSME financing space. IDFC FIRST Bank has maintained high asset quality over the years. The Gross and Net NPA of the Company is 1.62% and 1.00% respectively as of 30th June 2018 on 90 dpd NPA recognition basis.\n\n
        The company enjoys the highest long term credit rating of AAA. IDFC FIRST Bank is focused on building an institution on strong pillars of ethics, values and high corporate governance.\n\n</string>
    <string name="bank_doc_req_string">   All you require is your Aadhaar Number and PAN.\n
You should be carrying your registered mobile number linked with Aadhaar while opening this account.\n
Again,\n\n
● PAN Card\n
● Aadhaar Card\n
● Mobile number linked in Aadhaar</string>
    <string-array name="indusind_features_array">
        <item>  Get account number of your choice</item>
        <item>  Fingerprint banking on Indus Mobile</item>
        <item>  Free IMPS/NEFT/RTGS transactions on Online Channels</item>
        <item>  Balance and Transaction Alerts on Whatsapp</item>
        <item>  Discount on Locker</item>
        <item>  Access to Tapzo All In One Store for Cab</item>
        <item>  Booking, Food Ordering etc. on Indus Mobile</item>
        <item>  Free Cash Withdrawal &amp; Free Cash Deposit up to Rs 2 Lacs</item>
    </string-array>
    <string name="about_us_our_aim">

        <b><font color="blue">OUR AIM</font></b>\n\n
        To become one stop solution provider for all queries that arise when you inquire about any financial product existing or upcoming. We have a wide range of banking and financial products in our inventory with exclusive offers at Finbaz.On our website, we provide variety of products and also let the customer compare and finally buy the same. What else? Our customers can also check thier credit score here for free!

    </string>
    <string name="about_us_privacy">

        <b><font color="blue">PRIVACY</font></b>\n\n
        Finbaz doesn\'t collect your personal information and hence redirect you to the direct application link on the bank website for faster processing of the Credit Cards you apply in India. So that you can be double sure that your personal data is safe and secure.


    </string>
    <string name="about_us_technology">

        <b><font color="blue">TECHNOLOGY AND PLATFORM</font></b>\n\n
        With our unique tool customers have the flexibilty of comparing and choosing the best-fit credit card for them, based on various factors like income, spending-behaviour and your credit score of course! We let our customers choose across categories such as credit cards, home loans, personal loans, car loans, business loans, mutual funds, Demat and savings accounts, to name a few. We also constantly work on interactive blogs about different banking and financial products to keep our customers updated about the market.

    </string>
    <string name="about_us_convenience">

        <b><font color="blue">CONVENIENCE</font></b>\n\n
        With us at Finbaz your journey from choosing a product, comparing and finally norrowing down to the one that suits you best becomes seamless and hassle-free with our personalised and interactive platform. Our customers can buy any product at their convenience and get an unbiased and customized service 24/7.Finbaz match you to the best fit Financial products based on your requirements.

    </string>
</resources>